# X.Fail

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  test_core.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  copilot-instructions.md
.github/workflows/: auto-version.yml
results/20260420_014802/: algo_001_grok.json
results/20260420_014803/: algo_001_gemini.json
results/20260420_014807/: deceptive_001_grok.json
results/20260420_014808/: deceptive_001_gemini.json
results/20260420_014825/: sysdesign_001_gemini.json  sysdesign_001_grok.json
xfail/: cli.py
xfail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
xfail/harness/: adversary.py  classifier.py  logger.py  runner.py  task.py
xfail/models/: gemini_client.py  xai_client.py
xfail/reports/: generator.py
xfail/tasks/poc/: algo_001.yaml  deceptive_001.yaml  sysdesign_001.yaml
