[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xfail"
version = "0.1.0"
description = "Model autopsy benchmark for failure mode analysis"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
xfail = "xfail.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xfail*"]
